--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "transcribereactpdf",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gitname.github.io/STTH_PROTO",
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -35,6 +36,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -62,6 +65,7 @@
     "@babel/register": "^7.21.0",
     "babel-preset-react-app": "^10.0.1",
     "cross-env": "^7.0.3",
+    "gh-pages": "^5.0.0",
     "jasmine": "^4.5.0",
     "jsdom": "^21.1.0"
   }
